assets/scss/components/_card.scss
/* ... */
@include query-below($mobile) {
	.layout-grid {
		.entry-image--tall,
		.entry-image--portrait {
			max-width: 35%;
		}
	}
}



///*-----------------------------------------*\
//   Sticky Post Ribbon
//\*-----------------------------------------*/
.sticky .sticky-post {
	position: absolute;
	top: 0;
	right: 20px;
	z-index: 1;
	display: block;
	width: 15px;
	height: 15px;
	background: $accent;

	&:before, &:after {
		content: "";
		position: absolute;
		bottom: -8px;
		left:0;
		width: 0;
		height:0;
		border-top: 8px solid $accent;
		border-right: 8px solid transparent;
	}

	&:after {
		left: auto;
		right: 0;
		border-left: 8px solid transparent;
		border-right: none;
	}
}




///*-----------------------------------------*\
//   4.0 - Title Size
//\*-----------------------------------------*/


// EXCERPT
.entry-card {

	.entry-content {
		@extend %fs-14;
		@extend %hyphens;

		-webkit-hyphens: auto;
		-moz-hyphens: auto;
		-ms-hyphens: auto;
		hyphens: auto;

		margin-top: 8px;
	}

	.entry-meta + .entry-content {
		margin-top: 0;
	}

	.entry-content--short {
		@extend %fs-16;
	}
}

// TITLES
// Default Styling
.entry-card {
	.entry-title {
		@extend %lh-1-45;
		@extend %ls-0-04;
		font-size: 26px;
		@extend %beta;
		font-weight: normal;
	}

	.entry-header--long .entry-title {
		@extend .light;
	}
}

// TEXT
.entry-card--text {

	.entry-header .entry-title {

	}

	.entry-header--short .entry-title {
		@extend %fs-42;
	}

	.entry-header--medium .entry-title {
		@extend %fs-36;
	}

	.entry-header--long .entry-title {
		@extend %fs-30;
		font-weight: normal;
	}
}

// PORTRAIT
// TALL
.entry-card--portrait,
.entry-card--tall {
	.entry-title {
		@extend %ls-0-02;
		font-weight: bold;
	}

	.entry-header--short .entry-title {
		font-weight: bold;
		@extend %lh-1-25;
		@extend %ls-0;
		font-size: 36px;
	}

	.entry-header--medium .entry-title {
		@extend %lh-1-33;
		font-size: 30px;
	}

	.entry-header--long .entry-title {
		font-weight: bold;
	}

}

// Blockquote
.entry-card.format-quote {
	.entry-content {
		margin-left: 0;
		margin-bottom: 20px;
		padding-top: (20px + $gutter);
		padding-bottom: (20px + $gutter);
		padding-right: $gutter;

		-webkit-font-smoothing: antialiased;

		background-color: black;
		background-size: cover;
		background-position: center center;

		a {
			box-shadow: inset 0 -3px 0 $accent;
			color: white;

			&:hover {
				color: $accent;
			}
		}
	}

	blockquote {
		font-size: 24px;
		color: white;
		margin-bottom: 0;

		* {
			color: white;
		}
	}

	.entry-quote--short blockquote {
		font-size: 30px;
	}

	cite {
		display: block;
		margin-top: 18px;

		color: white;
		font-size: 15px;
		text-transform: uppercase;
	}
}

